# backoffice

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  NEXT_SESSION_APPTRACK_S3.md  README.md  cli.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: mirror-to-gitlab.yml
.gitlab/: applications.yml  billing.yml  ci-automation.yml  ci-metrics.yml  cloud-run.yml  docker-build.yml  fix-shell-runner.yml  gcp-migration.yml  gdrive-upload.yml  gmail-drafts.yml  k3s-setup.yml  mab-integration.yml  nsai-tests.yml  pages.yml  publications.yml  roundtrip-test.yml  runner-fallback.yml  terraform.yml  tests.yml
attachments/: README.md
common/: __init__.py
common/auth/: __init__.py  google.py
common/models/: __init__.py  base.py
common/storage/: __init__.py  backend.py  gdrive.py  s3.py
common/templates/: __init__.py
config/: README.md  credentials.json.example  settings.yaml
config/gitlab/: README.md  pat.token  runner-gcp-group.token  runner-gcp.token  runner-mac-group.token  runner-mac.token  runner.token
config/google/: credentials.json  runner-controller-sa.json
config/storage/: README.md
data/: bewerbungen_komplett_SORTED_Jan_31_2026.csv
docs/: RUNNER_SETUP.md  SETUP_OAUTH.md  apptrack-dashboard.html  ci-dashboard.html  crm-dashboard.html  index.md  manifest.json  portal.html  runner-fleet.html  sw.js
docs/adr/: ADR-027-nsai-architecture.html  ADR-030-applications-migration.md  README.md
docs/handover/: HANDOVER_APPTRACK_SPRINT1_09_02_2026.md  HANDOVER_APPTRACK_SPRINT1_DONE_09_02_2026.md  HANDOVER_APPTRACK_SPRINT2_09_02_2026.md  HANDOVER_APPTRACK_SPRINT3_09_02_2026.md  HANDOVER_APPTRACK_SPRINT4_09_02_2026.md  HANDOVER_APPTRACK_SPRINT5_09_02_2026.md  HANDOVER_BILLING_TESTS_04_02_2026.md  HANDOVER_CI_METRICS_05_02_2026.md  HANDOVER_CI_REFACTOR_03_02_2026.md  HANDOVER_GCP_STOCKHOLM_03_02_2026.md  HANDOVER_HOUSEKEEPING_08_02_2026.md  HANDOVER_MAB_CLOUD_RUN_05_02_2026.md  HANDOVER_MAB_FULL_06_02_2026.md  HANDOVER_MAB_INTEGRATION_06_02_2026.md  HANDOVER_MIGRATION_04_02_2026.md  HANDOVER_NSAI_INTERFACE_05_02_2026.md  HANDOVER_NSAI_V030_06_02_2026.md  HANDOVER_PROFILES_CI_04_02_2026.md  HANDOVER_QUARTO_PIPELINE_07_02_2026.md  HANDOVER_RUNNER_FALLBACK_03_02_2026.md  HANDOVER_RUNNER_INTELLIGENCE_07_02_2026.md  HANDOVER_TESTSUITE_04_02_2026.md  HANDOVER_VORHOELLE_V02_07_02_2026.md  INDEX.md  NEXT_CHAT_TEMPLATE.md  NEXT_SESSION_06_02_2026.md  NEXT_SESSION_07_02_2026.md  NEXT_SESSION_08_02_2026.md  NEXT_SESSION_09_02_2026.md  NEXT_SESSION_APPTRACK_S1.md  NEXT_SESSION_APPTRACK_S2.md  NEXT_SESSION_SPRINT3_09_02_2026.md  SESSION_SUMMARY_04_02_2026.md
docs/ops/: qa-rituals.md  testing-strategy.md
docs/runbook/: applications.md  billing.md  crm.md  feature-workflow.md  git-workflow.md  index.md  troubleshooting.md
docs/services/: nsai.md
infra/gcp/: README.md  cloud-init.yaml  gcp-runner-bootstrap.sh
infra/k3s/: setup-k3s.sh
infra/k8s/: 00-namespace.yaml  01-secrets.yaml  02-configmap-frontend.yaml  10-timesheet-api.yaml  10-timesheet-backend.yaml  11-timesheet-frontend.yaml  20-ingress.yaml  all-in-one.yaml
infra/macos/: com.blauweiss.sleepwatcher.plist
modules/: __init__.py
modules/applications/: __init__.py  bewerbung.py  crawl_service.py  database.py  models.py  review_service.py  service.py  web.py
modules/controlling/: __init__.py  cli.py  service.py
modules/gmail/: __init__.py  client.py  drafter.py  profiles.py  profiles.yaml
modules/invoicing/: DEPRECATED.md  __init__.py  cli.py  service.py
modules/profiles/: README.md  __init__.py  config.yaml  loader.py  matching.py  models.py
modules/tax/: __init__.py  cli.py  service.py
modules/timesheets/: DEPRECATED.md  __init__.py  cli.py  service.py
portal-v2/: .env.example  docker-compose.yml
portal-v2/backend/: Dockerfile  requirements.txt
portal-v2/frontend/: index.html  package.json
portal/frontend/: index.html
public/: timesheet.html
scripts/: collect-metrics.py  gdrive_list_deep.py  gdrive_reorganize.py  gdrive_upload_benchmark.py  generate-dashboard.py  generate-invoices.py  mab_recommend.sh  mab_report.sh  nsai_shadow.py  runner-flip-k8s.sh  runner-flip.sh  runner-setup-auto.sh  setup-bigquery.sh  setup-gcp-runner.sh  setup-k8s-all.sh  setup-kubeconfig.sh  setup-runner.sh  sync_credentials_gdrive.py  sync_notebooks_gdrive.py
scripts/ci/: applications_export_json.py  applications_import_csv.py  applications_stage.py  apptrack_create_single_draft.py  apptrack_ingest_crawl.py  apptrack_promote_review.py  apptrack_stage_approved.py  apptrack_update_matches.py  crm_automation.py  crm_integrity_check.py  crm_reporting.py  crm_update_on_draft.py  gmail_create_drafts.py
services/ci_metrics/: Dockerfile  README.md  requirements.txt
services/match-staging/: .gitignore  Dockerfile  README.md  pyproject.toml
services/match-staging/config/: notification-channels.yml
services/match-staging/data/: .gitkeep  bewerbungen.db
services/match-staging/src/: __init__.py  config.py  dispatcher.py  main.py  models.py
services/match-staging/src/adapters/: __init__.py  email_adapter.py  gitlab_adapter.py  slack_adapter.py  whatsapp_adapter.py
services/match-staging/src/db/: __init__.py  connection.py  migrate_csv.py  models.py  seed_runners.py  sync.py
services/match-staging/src/templates/: match_summary.html
services/match-staging/tests/: test_db_e2e.py  test_staging.py  test_sync_e2e.py
services/nsai/: CONTRIBUTING.md  README.md  __init__.py  interface.py  pyproject.toml  requirements.txt
services/nsai/csp/: __init__.py  constraint_solver.py
services/nsai/notebooks/: demo.ipynb  nsai_experiment.ipynb
services/nsai/ontology/: __init__.py  runner_ontology.py
services/nsai/parser/: __init__.py  job_parser.py
services/nsai/tests/: test_csp.py  test_interface.py  test_notebooks.py  test_nsai_integration.py  test_ontology.py  test_parser.py
services/runner_bandit/: Dockerfile  README.md  requirements.txt
src/admin/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  billing.py  (+3 more)
timesheets/: 2026-01-krongaard.yaml
(+77 files in other folders)
