[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsai"
version = "0.4.0"
description = "Neurosymbolic AI Runner Selection for GitLab CI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Wolfram Laube", email = "wolfram.laube@blauweiss-edv.at"}
]
keywords = ["ci/cd", "gitlab", "neurosymbolic", "ai", "runner-selection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "nbval>=0.11",
]

# Explicit package discovery to avoid flat-layout error (#41)
[tool.setuptools.packages.find]
where = ["."]
include = ["nsai*", "ontology*", "parser*", "csp*"]
exclude = ["tests*", "notebooks*"]

[tool.setuptools.package-dir]
nsai = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["nsai"]
omit = ["tests/*"]
